refactor(ci/cd): DockerFile 수정